--- a/sevices.html
+++ b/sevices.html
@@ -66,7 +66,7 @@
               >PATIENT PORTAL</a
             >
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
             >
               <span class="btn__text">BOOK NOW</span>
@@ -132,7 +132,7 @@
                   >
                   <div>
                     <a
-                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                      class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                       href="#"
                     >
                       <span class="btn__text">BOOK NOW</span>
@@ -169,7 +169,7 @@
               quality veterinary services under one roof.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
             >
               <span class="btn__text">BOOK NOW</span>
@@ -327,7 +327,7 @@
                 </p>
                 <div class="">
                   <a
-                    class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                    class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                     href="#"
                   >
                     <span class="btn__text">BOOK NOW</span>
@@ -357,7 +357,7 @@
                   requires.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./animalhealth.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -380,7 +380,7 @@
                   need.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./vaccination.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -404,7 +404,7 @@
                   extractions and any other care your pet may need.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./dental.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -448,7 +448,7 @@
                   treatments.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="#"
                 >
                   <span class="btn__text">BOOK NOW</span>
@@ -475,7 +475,7 @@
                   treatment.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./emergencycare.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -496,7 +496,7 @@
                   pet without leaving the home
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./telemedicine.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -521,7 +521,7 @@
                   experts.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./diagnostics.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -544,7 +544,7 @@
                   pharmacy can have it delivered to you within 24 hours.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./pharmacy.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -586,7 +586,7 @@
                   committed to providing the highest level of care to your pets.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="#"
                 >
                   <span class="btn__text">BOOK NOW</span>
@@ -615,7 +615,7 @@
                   receiving a request!
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./surgery.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -639,7 +639,7 @@
                   beloved pets
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./Spay&Neuter.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -682,7 +682,7 @@
                   your pet's unique needs.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="#"
                 >
                   <span class="btn__text">BOOK NOW</span>
@@ -709,7 +709,7 @@
                   travels –the process is simple and easy.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./travel.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -737,7 +737,7 @@
                   address the underlying cause of their discomfort.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./skin&dermatology.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -760,7 +760,7 @@
                   completely safe procedure typically takes only a few minutes.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./microchiping.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -783,7 +783,7 @@
                   well-being of your beloved pets.
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./lasertheropy.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -806,7 +806,7 @@
                   perform end-of-life services at the time of your choosing..
                 </p>
                 <a
-                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+                  class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
                   href="./hospice&euthanasia.html"
                 >
                   <span class="btn__text">LEARN MORE</span>
@@ -848,7 +848,7 @@
               support, ensuring a healthier and happier life for them.
             </p>
             <a
-              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
+              class="roboto-mono text-[#494336] font-medium text-base xl:text-lg py-2 xl:py-3 px-[18px] md:px-[30px] xl:px-[38px] bg-gradient !rounded-[27px] duration-300 btn btn--2 overflow-hidden relative text-center"
               href="#"
             >
               <span class="btn__text">BOOK NOW</span>
